# ockam

./: .gitmodules
implementations/c/: build.gradle  settings.gradle
implementations/c/config/: vault_config.h
implementations/c/include/: ockam_def.h  ockam_err.h
implementations/c/include/kal/: ockam_kal.h
implementations/c/include/log/: ockam_log.h
implementations/c/include/mem/: ockam_mem.h
implementations/c/include/ockam/: .error.h.swp  define.h  error.h  kal.h  log.h  memory.h  vault.h
implementations/c/include/ockam/vault/: define.h  hardware.h  host.h  software.h  tpm.h
implementations/c/include/ockam/vault/hardware/: microchip.h
implementations/c/include/vault/: ockam_vault.h  ockam_vault_def.h  ockam_vault_hw.h  ockam_vault_hw_microchip.h  ockam_vault_sw.h
implementations/c/source/kal/: ockam_kal_freertos.c  ockam_kal_linux.c
implementations/c/source/log/: ockam_log_linux.c
implementations/c/source/mem/: ockam_mem_stdlib.c
implementations/c/source/ockam/memory/: malloc.c
implementations/c/source/ockam/vault/: CMakeLists.txt  vault.c
implementations/c/source/ockam/vault/hardware/microchip/: atecc508a.c  atecc608a.c
implementations/c/source/ockam/vault/host/: mbedcrypto.c
implementations/c/source/ockam/vault/software/: libsodium.c  mbedcrypto.c  mbedtls.c
implementations/c/source/ockam/vault/tpm/microchip/: atecc508a.c  atecc608a.c
implementations/c/source/vault/: ockam_vault.c
implementations/c/source/vault/hw/microchip/: ockam_vault_hw_atecc508a.c  ockam_vault_hw_atecc608a.c
implementations/c/source/vault/sw/libsodium/: ockam_vault_sw_libsodium.c
implementations/c/source/vault/sw/mbedtls/: ockam_vault_sw_mbedtls.c
implementations/c/test/ockam/vault/atecc508a/: CMakeLists.txt
implementations/c/test/ockam/vault/atecc508a/config/: ockam_vault_cfg.h  vault_config.h
implementations/c/test/ockam/vault/atecc508a/source/: test_atecc508a.c
implementations/c/test/ockam/vault/atecc608a/src/: test_atecc608a.c
implementations/c/test/vault/atecc508a/: settings.gradle
implementations/c/test/vault/atecc508a/source/: test_atecc508a.c
implementations/c/test/vault/atecc608a/src/: test_atecc608a.c
